<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.asus.loginapp.Activities.RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prompt_name"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/txt1"
            android:layout_alignParentLeft="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:id="@+id/reg_name"
            android:textColor="@color/textColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/txt2"
            android:layout_below="@id/reg_name"
            android:layout_alignParentLeft="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:id="@+id/reg_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/txt3"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/reg_email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt3"
            android:id="@+id/reg_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prompt_con_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/txt4"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/reg_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt4"
            android:id="@+id/con_reg_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/con_reg_password"
            android:layout_marginTop="32dp"
            android:text="@string/reg_btn_label"
            android:textStyle="bold"
            android:id="@+id/reg_button"
            android:background="@drawable/buttonselector"
            android:textColor="@color/textColor"
            style="?android:textAppearanceSmall"
            />

    </RelativeLayout>
</LinearLayout>
