<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.asus.loginapp.Activities.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textStyle="bold"

        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/txt1"
            android:layout_alignParentLeft="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/txt2"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="32dp"
            android:text="@string/login_bn_label"
            android:textStyle="bold"
            android:id="@+id/login_button"
            android:background="@drawable/buttonselector"
            android:textColor="@color/textColor"
            style="?android:textAppearanceSmall"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textSize="16dp"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/sign_up"
            />

    </RelativeLayout>

</LinearLayout>
